--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -16,6 +16,12 @@ author:
 # Gems
 plugins:
   - jekyll-paginate
+  - jekyll-relative-links
+  
+# Options
+relative_links:
+  enabled:     true
+  collections: true 
 
 # Custom vars
 version:             1.1.0
