--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -2,8 +2,8 @@
 title:               Covid in Wisconsin
 tagline:             ''
 description:         'A blog for unique analysis of Covid data in Wisconsin.'
-url:                 https://mattbayer.github.io/covid-wisconsin
-baseurl:             ''
+url:                 https://mattbayer.github.io
+baseurl:             '/covid-wisconsin'
 paginate:            5
 permalink:           pretty
 
