--- a/.github/workflows/update-data-dhs.yml
+++ b/.github/workflows/update-data-dhs.yml
@@ -5,20 +5,24 @@ on: [workflow_dispatch]
 jobs:
   update-data:
     runs-on: windows-latest
-
+    defaults:
+      run:
+        shell: bash -l {0}
+        
     steps:
     - uses: actions/checkout@v2
+    - name: Set up Python
+      uses: conda-incubator/setup-miniconda@v2
+      with:
+        auto-update-conda: true
+        python-version: 3.8
     - name: Set up Python 3.8
       uses: actions/setup-python@v2
       with:
         python-version: 3.8
-    - name: Add conda to system path
-      run: |
-        # $CONDA is an environment variable pointing to the root of the miniconda directory
-        echo $CONDA/bin >> $GITHUB_PATH
     - name: Install dependencies
       run: |
-        conda env update --name base pandas numpy os
+        conda env update pandas numpy os
     - name: Run update functions
       run: |
         python UpdateDataAuto.py
