--- a/.github/workflows/update-data-dhs.yml
+++ b/.github/workflows/update-data-dhs.yml
@@ -22,7 +22,7 @@ jobs:
         python-version: 3.8
     - name: Install dependencies
       run: |
-        conda install pandas
+        conda install pandas numpy datetime matplotlib urllib os json plotly
     - name: Run update functions
       run: |
         python UpdateDataAuto.py
