--- a/.github/workflows/update-data-dhs.yml
+++ b/.github/workflows/update-data-dhs.yml
@@ -1,6 +1,10 @@
 name: Update Data from Wisconsin DHS
 
-on: [workflow_dispatch]
+on: 
+  workflow_dispatch:
+  schedule:
+#    - cron: '20 20 * * *'
+    - cron: '35 22 * * *'
 
 jobs:
   update-data:
