--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 # Setup
 title:               Covid in Wisconsin
-tagline:             ''
+tagline:             
 description:         'Amateur analysis of our local Covid data.'
 logo:                '/public/LogoCovidWI.png'
 url:                 https://covid-wisconsin.com
